--- a/style.css
+++ b/style.css
@@ -713,6 +713,21 @@ h2{
     margin: 39px 0px 0px 0px;
 }
 @media (min-width: 768px) and (max-width: 999px){
+    #benefits-to-you #image{
+        grid-row: 1;
+        grid-column: 1;
+        position: relative;
+        background: url(./assets/img/assets-mobile-version.png);
+        background-size: cover;
+        width: 300px;
+        height: 400px;
+        background-position-y: -85px;
+        margin-right: 50px;
+    }
+    #benefits-to-you #text{
+        grid-row: 1;
+        grid-column: 2!important;
+    }
     #header #title h1 {
         font-size: 96px;
     }
@@ -934,7 +949,7 @@ h2{
         width: 100px;
     }
     #header #logos .logo{
-        margin: 0px 13px 10px 13px;
+        margin: 0px 10px 10px 10px;
     }
     #benefits-to-you #text{
         width: 90%;
@@ -979,6 +994,16 @@ h2{
     }
     h2:not(.special-h2){
         font-size: 36px!important;
+    }
+    #benefits-to-you #image{
+        grid-row: 2;
+        grid-column: 1;
+        position: relative;
+        background: url(./assets/img/assets-mobile-version.png);
+        background-size: cover;
+        width: -webkit-fill-available;
+        height: 500px;
+        background-position-y: -85px;
     }
 }
 @media (min-width:769px) and (max-width: 1025px){
@@ -1055,18 +1080,23 @@ h2{
         width: auto;
         max-width: 333px!important;
     }
-}
-@media (max-width: 1025px){
     #benefits-to-you #image{
-        grid-row: 2;
+        grid-row: 1;
         grid-column: 1;
         position: relative;
         background: url(./assets/img/assets-mobile-version.png);
         background-size: cover;
-        width: -webkit-fill-available;
-        height: 500px;
-        background-position-y: -100px;
+        width: 300px;
+        height: 400px;
+        background-position-y: -85px;
+        margin-right: 100px;
     }
+    #benefits-to-you #text{
+        grid-row: 1;
+        grid-column: 2!important;
+    }
+}
+@media (max-width: 1025px){
     #benefits-to-you #image img{
         display: none;
     }
