--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ body{
     position: relative;
     bottom: -4px;
     height: 825px;
+    overflow: hidden;
 }
 #about-us #elipse-1,#elipse-2,#elipse-3,#people{
 grid-row: 1/1;
@@ -277,12 +278,56 @@ grid-column: 1/1;
 }
 #about-us #elipse-1{
     z-index: 20;
+    animation-name: elipse-1;
+    animation-duration: 2s;
+    position: relative;
+    bottom: -500px;
+    animation-fill-mode: forwards;
+}
+#about-us:hover{
+    animation-play-state: paused!important;
 }
 #about-us #elipse-2{
     z-index: 30;
+    animation-name: elipse-2;
+    animation-duration: 2s;
+    animation-delay: 500ms;
+    position: relative;
+    bottom: -500px;
+    animation-fill-mode: forwards;
 }
 #about-us #elipse-3{
     z-index: 40;
+    animation-name: elipse-3;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    position: relative;
+    bottom: -500px;
+    animation-fill-mode: forwards;
+}
+@keyframes elipse-1{
+    0%{
+        bottom: -500px;
+    }
+    100%{
+        bottom: 0px;
+    }
+}
+@keyframes elipse-2{
+    0%{
+        bottom: -500px;
+    }
+    100%{
+        bottom: 0px;
+    }
+}
+@keyframes elipse-3{
+    0%{
+        bottom: -500px;
+    }
+    100%{
+        bottom: 0px;
+    }
 }
 #about-us p,#about-us pre{
     margin: 0;
@@ -329,7 +374,7 @@ grid-column: 1/1;
     margin: 10px;
     background: white;
 }
-#what-we-offer .card h4{
+#what-we-offer .card h4,#what-we-offer #card-8 h4{
     font-family: Noto Sans SC;
     font-style: normal;
     font-weight: bold;
@@ -340,7 +385,7 @@ grid-column: 1/1;
     margin: 48px 0px 0px 0px;
     color: #555555;
 }
-#what-we-offer .card p{
+#what-we-offer .card p,#what-we-offer #card-8 p{
     font-family: Noto Sans SC;
     font-style: normal;
     font-weight: normal;
