add animation on elipse

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
 @font-face {
     font-family: Noto Sans SC;
     font-weight: normal;
-    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Regular.otf);
+    src: url(../assets/fonts/Nato-sans-sc/NotoSansSC-Regular.otf);
    }
 @font-face {
     font-family: Noto Sans SC Bold;
-    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
+    src: url(../assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
 }
 @font-face {
     font-family: Noto Sans SC;
     font-weight: bold;
-    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
+    src: url(../assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
 }
 @font-face {
     font-family: Noto Sans SC;
     font-weight: 900;
-    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
+    src: url(../assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
 }
 /* Боковое навигационное меню */
 .sidenav {
@@ -130,7 +130,7 @@ body{
     text-decoration: none!important;
 }
 #header{
-    background-image: url(./assets/img/Rectangle\ 1.png);
+    background-image: url(../assets/img/Rectangle\ 1.png);
     padding:67px 0px 0px 0px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -278,56 +278,12 @@ grid-column: 1/1;
 }
 #about-us #elipse-1{
     z-index: 20;
-    animation-name: elipse-1;
-    animation-duration: 2s;
-    position: relative;
-    bottom: -500px;
-    animation-fill-mode: forwards;
-}
-#about-us:hover{
-    animation-play-state: paused!important;
 }
 #about-us #elipse-2{
     z-index: 30;
-    animation-name: elipse-2;
-    animation-duration: 2s;
-    animation-delay: 500ms;
-    position: relative;
-    bottom: -500px;
-    animation-fill-mode: forwards;
 }
 #about-us #elipse-3{
     z-index: 40;
-    animation-name: elipse-3;
-    animation-duration: 2s;
-    animation-delay: 1s;
-    position: relative;
-    bottom: -500px;
-    animation-fill-mode: forwards;
-}
-@keyframes elipse-1{
-    0%{
-        bottom: -500px;
-    }
-    100%{
-        bottom: 0px;
-    }
-}
-@keyframes elipse-2{
-    0%{
-        bottom: -500px;
-    }
-    100%{
-        bottom: 0px;
-    }
-}
-@keyframes elipse-3{
-    0%{
-        bottom: -500px;
-    }
-    100%{
-        bottom: 0px;
-    }
 }
 #about-us p,#about-us pre{
     margin: 0;
@@ -775,7 +731,7 @@ h2{
         grid-row: 1;
         grid-column: 1;
         position: relative;
-        background: url(./assets/img/assets-mobile-version.png);
+        background: url(../assets/img/assets-mobile-version.png);
         background-size: cover;
         width: 300px;
         height: 400px;
@@ -1057,7 +1013,7 @@ h2{
         grid-row: 2;
         grid-column: 1;
         position: relative;
-        background: url(./assets/img/assets-mobile-version.png);
+        background: url(../assets/img/assets-mobile-version.png);
         background-size: cover;
         width: -webkit-fill-available;
         height: 500px;
@@ -1142,7 +1098,7 @@ h2{
         grid-row: 1;
         grid-column: 1;
         position: relative;
-        background: url(./assets/img/assets-mobile-version.png);
+        background: url(../assets/img/assets-mobile-version.png);
         background-size: cover;
         width: 300px;
         height: 400px;
