--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body{
     text-decoration: none!important;
 }
 #header{
-    background-image: url(../assets/img/Rectangle\ 1.png);
+    background-image: url(../assets/img/Rectangle\ 1.jpg);
     padding:67px 0px 0px 0px;
     background-repeat: no-repeat;
     background-size: cover;
